www/projects/prj_1-nick_moore/styles/index.css
/*
* Sources and References
* Toggle switch css from https://dev.to/ananyaneogi/create-a-dark-light-mode-switch-with-css-variables-34l8
*/
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,700;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap');


:root {
    --amber-200: #FDE68A;
    --amber-300: #FCD34D;
    --amber-400: #FBBF24;
    --amber-500: #F59E0B;
    --emerald-50: #ecfdf5;
    --emerald-100: #d1fae5;
    --emerald-200: #a7f3d0;
    --emerald-300: #6ee7b7;
    --emerald-400: #34d399;
    --gray-100: #f2f4f6;
    --gray-200: #e5e7eb;
    --gray-600: #4b5563;
    --gray-700: #374151;
    --violet-200: #ddd5fe;
    --violet-300: #c4b5fd;
    --violet-400: #a78bfa;
    --violet-600: #7c3aed;
    --violet-700: #6d28d9;
    --violet-800: #5b21b6;
    --bg-primary: #F8FAFC;
    --fg-primary: #000000;
    --gray-sunglasses: var(--gray-200);
    --linear-primary: linear-gradient(to right, var(--violet-600) 0%, var(--violet-800) 100%);
    --linear-glass: linear-gradient(to bottom right, rgba(75, 85, 99, .25), rgba(229, 231, 235, .25));
    --linear-glass-mobile: linear-gradient(to bottom right, rgba(75, 85, 99, .55), rgba(229, 231, 235, .75));
    --header-font: 'Ubuntu', sans-serif;
    --body-font: 'Ubuntu Mono', sans-serif;
    --body-color: var(--gray-700);
    --body-accent: var(--amber-500);
    --body-light-accent: var(--violet-300);
    --link-color: var(--violet-600);
}

[data-theme="dark"] {
    --bg-primary: #334155;
    --fg-primary: var(--gray-100);
    --gray-sunglasses: #000000;
    --linear-primary: linear-gradient(to right, var(--emerald-300) 0%, var(--emerald-400) 100%);
    --body-color: var(--gray-200);
    --body-accent: var(--violet-800);
    --body-accent: var(--amber-300);
    --body-light-accent: var(--violet-400);
    --link-color: var(--emerald-400);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    background-color: var(--bg-primary);
    transition: ease-in-out .5s;
}

body {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: center;
    width: 100vw;
    height: 100vh;
}

h1 {
    font-family: var(--header-font);
    font-weight: bold;
    font-size: 3rem;
    color: var(--fg-primary);
}

h3 {
    font-family: var(--header-font);
    font-weight: bold;
    font-style: italic;
    font-size: 2rem;
    color: var(--fg-primary);
}

.header-title-link {
    text-decoration: none;
}

.header-lowercase {
    text-transform: lowercase;
}

.header-gradient-text {
    background: var(--linear-primary);
	background-clip: text;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
    transition: ease-in-out .5s;
}

.header-graphic {
    position: absolute;
    width: 100%;
    height: auto;
    z-index: -1000;
}

.header-graphic > img{
    width: 100%;
}

.header-image {
    position: absolute;
    transform: translateY(-1000);
    opacity: 0;
    transition: ease-in-out .5s;
}

.active-graphic {
    transform: translateY(0);
    opacity: 1.0;
    transition: ease-in-out .5s;
}

.header-main {
    position: absolute;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 5rem;
    padding: 1rem 2rem;
    z-index: 1;
}

.header-nav {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    column-gap: 1rem;
}

.nav-item {
    font-family: var(--header-font);
    font-weight: 200;
    color: var(--link-color);
    text-decoration: none;
}

.nav-item-active {
   font-weight:700; 
   text-decoration: underline;
}

/* Theme toggle section */
.header-theme-toggle {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    padding: .25rem .5rem;
}

.theme-switch {
  display: inline-block;
  height: 34px;
  position: relative;
  width: 60px;
}

.theme-switch input {
  display:none;
}

.slider {
    background: var(--linear-primary) ;
    bottom: 0;
    cursor: pointer;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: ease-in-out .5s;
}

.slider:before {
    background-color: #fff;
    bottom: 4px;
    content: "";
    height: 26px;
    left: 4px;
    position: absolute;
    width: 26px;
    transition: ease-in-out .5s;
}

input:checked + .slider {
    background: var(--linear-primary) ;
    transition: ease-in-out .5s;
}

input:checked + .slider:before {
    transform: translateX(26px);
    transition: ease-in-out .5s;
}

.slider.round {
  border-radius: 34px;
  transition: 0s;
}

.slider.round:before {
  border-radius: 50%;
}

.sunglasses {
    width: 3rem;
    height: auto;
    padding: .5rem;
    color: var(--gray-sunglasses);
    transition: ease-in-out .5s;
}

/*****************************************
****          MAIN ELEMENT            ****
*****************************************/
main {
    position: absolute;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.main-content {
    position: absolute;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    z-index: 1;
}

.main-content-headline {
    position: relative;
    display: flex;
    flex-flow: column nowrap;
    margin-right: 1.5rem;
}

.main-content-subtitle {
    font-size: 3.5rem;
    font-weight: 700;
    margin-bottom: -1rem;
}

.main-content-title {
    font-size: 8rem;
    font-weight: 300;
}

.main-blob {
    position: absolute;
    z-index: 0;
}

.main-content-info-card {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    width: 25rem;
    height: 30rem;
    margin-left: -3rem;
    background: var(--linear-glass);
    border-radius: 2em;
    backdrop-filter: blur(10px);
    border: 1px solid rgba(109, 40, 217, 0.05);
    background-clip: padding-box;
    box-shadow: 10px 15px 40px rgba(109, 40, 217, .20);
}

.info-card-img {
    position: absolute;
    width: 16rem;
    height: 16rem;
    top: -8rem;
    border-radius: 50%;
    overflow: hidden;
    filter: drop-shadow(0px 10px 10px rgba(109, 40, 217, .30));
}

.info-card-img > img {
    width: 16rem;
    height: 16rem;
}

.info-card-content {
    position: absolute;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 1.25rem;
}

.info-card-content > p {
    font-family: var(--body-font);
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 1.6rem;
    text-align: center;
    color: var(--body-color);
}

.span-title {
    font-family: var(--body-font);
    font-size: 2rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--body-color);
}

.info-card-links {
    position: absolute;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
    width: 90%;
    bottom: 0;
    padding-bottom: 1rem;
}

.info-card-links > a { text-decoration: none;
}

.info-card-links > a > svg {
    width: 4rem;
    height: 4rem;
}

/*****************************************
****          PROJECTS PAGE           ****
*****************************************/
.projects-main {
    position: relative;
    display: flex;
    flex-flow: column wrap;
    justify-content:flex-start;
    align-items:center;
    margin-top: 7rem;
}

.coming-soon-text {
    margin-top: 3rem;
    font-weight: 300;
    color: var(--gray-600);
}

/*****************************************
*****          CAUSE PAGE           ******
*****************************************/
.cause-main {
    position: relative;
    display: flex;
    flex-flow: column wrap;
    justify-content:flex-start;
    align-items:center;
    margin-top: 7rem;
}

.cause-title {
    text-align: center;
    font-weight: 700;
}

.cause-subtitle {
    font-family: var(--body-font);
    font-size: 1.75rem;
    color: var(--body-light-accent);
    text-align: center;
}

.cause-catch-line {
    font-family: var(--body-font);
    font-size: 2rem;
    color: var(--body-accent);
    text-align: center;
    font-style: italic;
}

.cause-content-body {
    margin-top: 8rem;
    font-family: var(--body-font);
    color: var(--fg-primary);
    font-size: 1.75rem;
    text-align: center;
}

/*****************************************
****        MOBILE 1024px MAX         ****
****         iPad Pro Screen          ****
*****************************************/
@media only screen and (max-width: 1024px) {
    .header-main {
        position: fixed;
        width: 100%;
        z-index: 10000;
    }

    main {
        position: relative;
        top: -2rem;
    }

    .main-content {
        position: relative;
        flex-flow: column wrap;
    }

    .main-blob > svg {
        width: 45rem;
        height: auto;
    }

    .main-content-headline {
        margin-right: 0;
    }

    .main-content-title {
        font-size: 5rem;
        text-align: center;
    }

    .main-content-subtitle {
        font-size: 3rem;
        text-align: center;
    }

    .main-content-info-card {
        width: 60%;
        margin-left: 0;
        background: var(--linear-glass-mobile);
    }

    .info-card-img {
        position: relative;
        width: 13rem;
        height: 13rem;
        top: 1rem;
        filter: none;
    }

    .info-card-img > img {
        width: 13rem;
        height: 13rem;
    }

    .info-card-content {
        position: relative;
    }

    .info-card-content > p {
        color: var(--fg-primary);
    }

    .info-card-links {
        position: relative;
        padding-bottom: 0;
    }
}

/*****************************************
****        MOBILE 414px MAX          ****
****       iPhone Max Screen          ****
*****************************************/
@media only screen and (max-width: 414px) {
    .header-title {
        width: 100%;
    }

    .header-title > h1, .header-title > a {
        text-align: center;
    }

    main {
        top: 2rem;
    }

    .main-blob {
        padding-top: 3rem;
    }

    .main-blob > svg {
        width: 25rem;
        height: auto;
    }


    .main-content-title {
        font-size: 3.5rem;
    }

    .main-content-subtitle {
        font-size: 2rem;
    }

    .main-content-info-card {
        width: 80%;
    }
}

